# gloria-trade-angular

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: deploy.yml
client/: README.md  angular.json  package-lock.json  package.json
client/src/: index.html  styles.scss
client/src/app/: app.routes.ts
client/src/app/core/api/: api.service.ts  endpoints.ts
client/src/app/core/auth/: auth.guard.ts  auth.interceptor.ts  auth.service.ts  auth.state.ts
client/src/app/models/: auth.model.ts  index.ts  market.model.ts  notification.model.ts  portfolio.model.ts  prediction.model.ts  security.model.ts  sentiment.model.ts  trading.model.ts  user.model.ts  watchlist.model.ts
client/src/environments/: environment.prod.ts  environment.ts
deploy/: deploy.sh  gloria-trade.service  nginx.conf  setup-server.sh
docker/: docker-compose.yml  mongo-init.js
server/: .env.example  pyproject.toml
server/app/: config.py  database.py  main.py
server/app/admin/: router.py
server/app/auth/: dependencies.py  router.py  schemas.py  service.py
server/app/models/: market.py  ml.py  notification.py  order.py  otp.py  portfolio.py  price_history.py  security.py  sentiment.py  user.py  user_session.py  watchlist.py
server/app/notifications/: router.py
server/app/otp/: router.py  service.py
server/app/portfolio/: router.py
server/app/predictions/: router.py
server/app/securities/: router.py
server/app/trading/: router.py
server/app/watchlists/: router.py
server/app/websocket/: manager.py  router.py
server/scripts/: seed_nasdaq.py
(+44 files in other folders)
