[project]
name = "gloria-trade-angular-server"
version = "0.1.0"
description = "Gloria Trade Angular - AI-powered trading platform backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Database
    "motor>=3.6.0",
    "beanie>=1.27.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Data
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

ml = [
    "torch>=2.2.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
